docs: add doc for update quiz
